<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_spinner"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_list"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btactvivty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_activitay" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
